crates/frontend/src/parser.rs
use std::rc::Rc;

use colored::*;
use ecow::EcoString;
use thiserror::Error;

use crate::ast::expr::{
    AssignExpr, BinaryExpr, CallExpr, Expr, GetExpr, GroupingExpr, IdentifierExpr, IntLiteralExpr, LogicalExpr, RealLiteralExpr, StrLiteralExpr, UnaryExpr
};
use crate::lexer::{Token, TokenKind};
use crate::ast::stmt::{
    BlockStmt, ExprStmt, FnDeclStmt, ForRange, ForStmt, IfStmt, PrintStmt, ReturnStmt, Stmt, StructStmt, VarDeclStmt, WhileStmt
};
use tools::results::{PhyReport, PhyResult, Loc};


// Children mods
pub mod utils;
pub mod test_parser;

// ----------------
// Error managment
// ----------------
#[derive(Debug, Error, PartialEq)]
pub enum ParserErr {
    // Primary
    #[error("unexpected end of line")]
    UnexpectedEol,

    #[error("missing left hand side of binary expression")]
    MissingLhsInBinop,

    #[error("unexpected token to parse: '{0}'")]
    UnexpectedToken(String),

    #[error("error parsing int")]
    ParsingInt,

    #[error("error parsing real")]
    ParsingReal,

    #[error("parenthesis group is never closed")]
    ParenNeverClosed,

    // Variables
    #[error("missing variable name after 'var' keyword in declaration")]
    VarDeclNoName,

    #[error("value assigned during declaration is incorrect: {0}")]
    IncorrectVarDeclVal(String),

    #[error("expected an assignment or nothing in variable declaration")]
    WrongRhsVarDecl,

    #[error("expected expression for variable assignment")]
    NoExprAssign,

    // Assignment
    #[error("invalid assignment target")]
    InvalidAssignTarget,

    // Assignment
    #[error("expected '}}' after block statement")]
    UnclosedBlock,

    // If
    #[error("missing block start '{{' after 'if' condition")]
    MissingIfOpenBrace,

    #[error("missing block end '}}' in 'if' branch")]
    MissingIfCloseBrace,

    #[error("missing block start '{{' after 'else'")]
    MissingElseOpenBrace,

    #[error("missing block end '}}' in 'else' branch")]
    MissingElseCloseBrace,

    #[error("'if' statement with no condition")]
    IfWithNoCond,

    #[error("missing right expression in 'or' statement")]
    OrWithNoCond,

    #[error("missing right expression in 'and' statement")]
    AndWithNoCond,

    #[error("variable declaration inside 'if' block is not allowed")]
    VarDeclInIf,

    #[error("'else' branch can't have a condition")]
    ElseWithCond,

    // While
    #[error("'while' statement with no condition")]
    WhileWithNoCond,

    #[error("missing block start '{{' after 'while' condition")]
    MissingWhileOpenBrace,

    // For
    #[error("missing variable name in 'for' loop")]
    MissingVarNameFor,

    #[error("missing 'in' after variable name in 'for' loop")]
    MissingInFor,

    #[error("missing range in 'for' loop")]
    MissingForRange,

    #[error("only 'ints' are supported as 'for' ranges")]
    NonIntForRange,

    #[error("range can only be positive")]
    NegativeForRange,

    #[error("end of range smaller than start")]
    LesserEndForRange,

    #[error("missing start of range before '..'")]
    MissingStartForRange,

    #[error("missing end of range after '..'")]
    MissingEndForRange,

    #[error("missing block start '{{' after 'for' condition")]
    MissingForOpenBrace,

    // Call
    #[error("missing close parenthesis after arguments list")]
    MissingCallCloseParen,

    #[error("can't have more than 255 arguments")]
    TooManyCallArgs,

    #[error("missing comma to seperate arguments")]
    MissingArgsComma,

    // Function declaration
    #[error("missing function name after 'fn' keyword")]
    MissingFnName,

    #[error("missing '(' after function name")]
    NoOpenParenAfterFnName,

    #[error("can't have more than 255 parameters")]
    MaxFnArgs,

    #[error("function paramters must be identifiers")]
    WrongFnArgType,

    #[error("missing '{{' before function body")]
    MissingFnOpenBrace,

    // Structure declaration
    #[error("missing structure name after 'struct' keyword")]
    MissingStructName,

    #[error("missing '{{' before structure body")]
    MissingStructOpenBrace,

    #[error("missing '}}' after structure body")]
    MissingStructCloseBrace,

    // Property
    #[error("missing property name after '.'")]
    MissingPropName,

    // Others
    #[error("unexpected end of file")]
    UnexpectedEof,

    #[error("expected token type '{0:?}', found: {1:?}")]
    ExpectedToken(String, String),
}

impl PhyReport for ParserErr {
    fn get_err_msg(&self) -> String {
        format!("{} {}", "Parser error:".red(), self)
    }
}

pub(crate) type PhyResParser = PhyResult<ParserErr>;
pub(crate) type ParserStmtRes = Result<Stmt, PhyResParser>;
pub(crate) type ParserExprRes = Result<Expr, PhyResParser>;

enum FnKind {
    Fn,
    Method,
}

// ---------
//  Parsing
// ---------
#[derive(Default)]
pub struct Parser<'a> {
    tokens: &'a [Token],
    start_loc: usize,
    current: usize,
}

// TODO: Faire des localisation plus specifique. PAr exemple, si on parse :
//          print a + 2
//  la localisation de la variable "a" est en réalité celle de "print a".
//  Il faudrait faire une stack d'appel avec des localisations locales et
//  remonter.
impl<'a> Parser<'a> {
    pub fn parse(&mut self, tokens: &'a [Token]) -> Result<Vec<Stmt>, Vec<PhyResParser>> {
        self.tokens = tokens;

        let mut stmts: Vec<Stmt> = vec![];
        let mut errors: Vec<PhyResParser> = vec![];

        while !self.eof() {
            self.skip_new_lines();

            // We could have reached EOF while skipping new lines
            if self.eof() {
                break;
            }

            match self.parse_declarations() {
                Ok(stmt) => stmts.push(stmt),
                Err(e) => errors.push(e),
            }
        }

        if !errors.is_empty() {
            return Err(errors);
        }

        Ok(stmts)
    }

    fn parse_declarations(&mut self) -> ParserStmtRes {
        match self.at().kind {
            TokenKind::Var => self.parse_var_declaration(),
            _ => self.parse_stmt(),
        }
    }

    fn parse_var_declaration(&mut self) -> ParserStmtRes {
        self.expect(TokenKind::Var)?;
        let name = self
            .expect(TokenKind::Identifier)
            .map_err(|_| self.trigger_error(ParserErr::VarDeclNoName, true))?
            .value
            .clone();

        let mut value: Option<Expr> = None;

        match self.at().kind {
            TokenKind::Equal => {
                self.eat()?;
                let v = self.parse_expr();

                match v {
                    Ok(e) => value = Some(e),
                    Err(e) => match e.err {
                        ParserErr::UnexpectedEol | ParserErr::UnexpectedEof => {
                            return Err(self.trigger_error(ParserErr::NoExprAssign, true))
                        }
                        e => {
                            return Err(self.trigger_error(
                                ParserErr::IncorrectVarDeclVal(e.to_string()),
                                true,
                            ))
                        }
                    },
                }
            }
            TokenKind::NewLine | TokenKind::Eof => {}
            _ => return Err(self.trigger_error(ParserErr::WrongRhsVarDecl, true)),
        }

        self.skip_new_lines();

        Ok(Stmt::VarDecl(VarDeclStmt {
            name,
            value,
            loc: self.get_loc(),
        }))
    }

    fn parse_stmt(&mut self) -> ParserStmtRes {
        let stmt = match self.at().kind {
            TokenKind::Print => self.parse_print_stmt(),
            TokenKind::OpenBrace => self.parse_block_stmt(),
            TokenKind::If => self.parse_if_stmt(),
            TokenKind::While => self.parse_while_stmt(),
            TokenKind::For => self.parse_for_stmt(),
            TokenKind::Fn => self.parse_fn_decl_stmt(FnKind::Fn),
            TokenKind::Return => self.parse_return_stmt(),
            TokenKind::Struct => self.parse_struct_stmt(),
            _ => self.parse_expr_stmt(),
        };

        self.skip_new_lines();

        stmt
    }

    fn parse_print_stmt(&mut self) -> ParserStmtRes {
        self.expect(TokenKind::Print)?;

        let expr = self.parse_expr()?;

        Ok(Stmt::Print(PrintStmt {
            expr,
            loc: self.get_loc(),
        }))
    }

    fn parse_block_stmt(&mut self) -> ParserStmtRes {
        self.expect_and_skip(TokenKind::OpenBrace)?;

        let stmts = self.parse_block()?;

        Ok(Stmt::Block(BlockStmt {
            stmts,
            loc: self.get_loc(),
        }))
    }

    fn parse_block(&mut self) -> Result<Vec<Stmt>, PhyResParser> {
        let mut stmts: Vec<Stmt> = vec![];

        while !self.is_at(TokenKind::CloseBrace) && !self.eof() {
            stmts.push(self.parse_declarations()?);
            self.skip_new_lines();
        }

        self.expect_and_skip(TokenKind::CloseBrace)
            .map_err(|_| self.trigger_error(ParserErr::UnclosedBlock, true))?;

        Ok(stmts)
    }

    fn parse_if_stmt(&mut self) -> ParserStmtRes {
        self.eat()?;
        self.is_at_brace_or_end_of(ParserErr::IfWithNoCond)?;

        let condition = self.parse_expr()?;

        self.skip_expect_and_skip(TokenKind::OpenBrace)
            .map_err(|_| self.trigger_error(ParserErr::MissingIfOpenBrace, true))?;

        let mut then_branch = None;

        if !self.is_at(TokenKind::CloseBrace) {
            if self.is_at(TokenKind::Var) {
                return Err(self.trigger_error(ParserErr::VarDeclInIf, true));
            }

            then_branch = Some(Box::new(self.parse_stmt()?));
        }

        self.expect_and_skip(TokenKind::CloseBrace)
            .map_err(|_| self.trigger_error(ParserErr::MissingIfCloseBrace, true))?;

        let mut else_branch: Option<Box<Stmt>> = None;

        if self.is_at(TokenKind::Else) {
            self.eat()?;
            self.skip_new_lines();
            self.is_not_at_brace_or_end_of(ParserErr::ElseWithCond)?;

            self.expect_and_skip(TokenKind::OpenBrace)
                .map_err(|_| self.trigger_error(ParserErr::MissingElseOpenBrace, true))?;

            match self.at().kind {
                TokenKind::CloseBrace => {
                    self.eat()?;
                }
                _ => {
                    else_branch = Some(Box::new(self.parse_stmt()?));

                    self.expect_and_skip(TokenKind::CloseBrace)
                        .map_err(|_| self.trigger_error(ParserErr::MissingElseCloseBrace, true))?;
                }
            }
        }

        Ok(Stmt::If(IfStmt {
            condition,
            then_branch,
            else_branch,
            loc: self.get_loc(),
        }))
    }

    fn parse_while_stmt(&mut self) -> ParserStmtRes {
        self.eat()?;
        self.is_at_brace_or_end_of(ParserErr::WhileWithNoCond)?;

        let condition = self.parse_expr()?;
        self.skip_new_lines();

        if !self.is_at(TokenKind::OpenBrace) {
            return Err(self.trigger_error(ParserErr::MissingWhileOpenBrace, true));
        }

        let body = Box::new(self.parse_stmt()?);

        Ok(Stmt::While(WhileStmt {
            condition,
            body,
            loc: self.get_loc(),
        }))
    }

    fn parse_for_stmt(&mut self) -> ParserStmtRes {
        self.eat()?;

        let var_name = self
            .expect(TokenKind::Identifier)
            .map_err(|_| self.trigger_error(ParserErr::MissingVarNameFor, true))?
            .value;

        let placeholder = VarDeclStmt { name: var_name, value: None, loc: self.get_loc() };

        self.expect(TokenKind::In)
            .map_err(|_| self.trigger_error(ParserErr::MissingInFor, true))?;

        self.is_at_brace_or_end_of(ParserErr::MissingForRange)?;

        if self.is_at(TokenKind::DotDot) {
            return Err(self.trigger_error(ParserErr::MissingStartForRange, true))
        }
        else if self.is_at(TokenKind::Minus) {
            return Err(self.trigger_error(ParserErr::NegativeForRange, true))
        }

        let start = self
            .expect(TokenKind::Int)
            .map_err(|_| self.trigger_error(ParserErr::NonIntForRange, true))?
            .value
            .parse::<i64>()
            .map_err(|_| self.trigger_error(ParserErr::ParsingInt, true))?;

        let mut end = None;
        if self.is_at(TokenKind::DotDot) {
            self.eat()?;

            self.is_at_brace_or_end_of(ParserErr::MissingEndForRange)?;

            end = Some(
                self.expect(TokenKind::Int)
                    .map_err(|_| self.trigger_error(ParserErr::NonIntForRange, true))?
                    .value
                    .parse::<i64>()
                    .map_err(|_| self.trigger_error(ParserErr::ParsingInt, true))?
            );

            if Some(start) > end {
                return Err(self.trigger_error(ParserErr::LesserEndForRange, true))
            }
        }

        self.skip_new_lines();
        if !self.is_at(TokenKind::OpenBrace) {
            return Err(self.trigger_error(ParserErr::MissingForOpenBrace, true))
        }

        let body = Box::new(self.parse_stmt()?);

        Ok(Stmt::For(ForStmt {
            placeholder,
            range: ForRange { start, end },
            body,
            loc: self.get_loc(),
        }))
    }

    fn parse_fn_decl_stmt(&mut self, kind: FnKind) -> ParserStmtRes {
        self.eat()?;

        Ok(Stmt::FnDecl(self.parse_fn_decl(kind)?))
    }

    fn parse_fn_decl(&mut self, kind: FnKind) -> Result<FnDeclStmt, PhyResParser> {
        let name = self.expect(TokenKind::Identifier)
            .map_err(|_| self.trigger_error(ParserErr::MissingFnName, true))?
            .value;

        self.expect(TokenKind::OpenParen)
            .map_err(|_| self.trigger_error(ParserErr::NoOpenParenAfterFnName, true))?;

        self.skip_new_lines();

        let mut params: Vec<EcoString> = vec![];
        if !self.is_at(TokenKind::CloseParen) {
            loop {
                if params.len() >= 255 {
                    return Err(self.trigger_error(ParserErr::MaxFnArgs, true))
                }

                params.push(self.expect(TokenKind::Identifier)
                    .map_err(|_| self.trigger_error(ParserErr::WrongFnArgType, true))?
                    .value
                );

                self.skip_new_lines();

                if self.is_at(TokenKind::Comma) {
                    let _ = self.eat();
                    self.skip_new_lines();
                    
                    if self.is_at(TokenKind::CloseParen) { break }
                } else if !self.is_at(TokenKind::CloseParen) {
                    return Err(self.trigger_error(ParserErr::MissingArgsComma, true))
                } else {
                    break
                }
            }
        }

        self.eat()?;
        self.skip_new_lines();

        if !self.is_at(TokenKind::OpenBrace) {
            return Err(self.trigger_error(ParserErr::MissingFnOpenBrace, true))
        }
        
        self.eat()?;
        self.skip_new_lines();

        let body = Rc::new(self.parse_block()?);

        Ok(FnDeclStmt {
            name,
            params: Rc::new(params),
            body,
            loc: self.get_loc(),
        })
    }

    fn parse_return_stmt(&mut self) -> ParserStmtRes {
        self.eat()?;

        let mut value = None;
        if !self.is_at(TokenKind::NewLine) {
            value = Some(self.parse_expr()?);
        }
        
        Ok(Stmt::Return(ReturnStmt { value, loc: self.get_loc() }))
    }

    fn parse_struct_stmt(&mut self) -> ParserStmtRes {
        self.eat()?;

        let name = self.expect(TokenKind::Identifier)
            .map_err(|_| self.trigger_error(ParserErr::MissingStructName, true))?
            .value;

        self.expect(TokenKind::OpenBrace)
            .map_err(|_| self.trigger_error(ParserErr::MissingStructOpenBrace, true))?;

        // FIXME: Bancale le check sur le keyword...
        let mut methods: Vec<FnDeclStmt> = vec![];
        while !self.is_at(TokenKind::CloseBrace) && !self.eof() {
            self.skip_new_lines();
            
            if self.is_at(TokenKind::Fn) {
                self.eat()?;
            }
            methods.push(self.parse_fn_decl(FnKind::Method)?);
        }

        self.expect(TokenKind::CloseBrace)
            .map_err(|_| self.trigger_error(ParserErr::MissingStructCloseBrace, true))?;

        Ok(Stmt::Struct(StructStmt {
            name,
            methods,
            loc: self.get_loc(),
        }))
    }

    fn parse_expr_stmt(&mut self) -> ParserStmtRes {
        let expr = self.parse_expr()?;

        Ok(Stmt::Expr(ExprStmt {
            expr,
            loc: self.get_loc(),
        }))
    }

    fn parse_expr(&mut self) -> ParserExprRes {
        self.parse_assign()
    }

    fn parse_assign(&mut self) -> ParserExprRes {
        let assigne = self.parse_or()?;

        if self.is_at(TokenKind::Equal) {
            self.eat()?;
            let value = self.parse_assign()?;

            if let Expr::Identifier(e) = assigne {
                return Ok(Expr::Assign(AssignExpr {
                    name: e.name.clone(),
                    value: Box::new(value),
                    loc: self.get_loc(),
                }));
            } else {
                return Err(self.trigger_error(ParserErr::InvalidAssignTarget, true));
            }
        }

        Ok(assigne)
    }

    fn parse_or(&mut self) -> ParserExprRes {
        let left = self.parse_and()?;

        if self.is_at(TokenKind::Or) {
            self.eat()?;

            if self.is_at(TokenKind::OpenBrace)
                || self.is_at(TokenKind::Eof)
                || self.is_at(TokenKind::NewLine)
            {
                return Err(self.trigger_error(ParserErr::OrWithNoCond, true));
            }

            let right = self.parse_and()?;

            return Ok(Expr::Logical(LogicalExpr {
                left: Box::new(left),
                operator: EcoString::from("or"),
                right: Box::new(right),
                loc: self.get_loc(),
            }));
        }

        Ok(left)
    }

    fn parse_and(&mut self) -> ParserExprRes {
        let left = self.parse_equality()?;

        if self.is_at(TokenKind::And) {
            self.eat()?;

            if self.is_at(TokenKind::OpenBrace)
                || self.is_at(TokenKind::Eof)
                || self.is_at(TokenKind::NewLine)
            {
                return Err(self.trigger_error(ParserErr::AndWithNoCond, true));
            }

            let right = self.parse_equality()?;

            return Ok(Expr::Logical(LogicalExpr {
                left: Box::new(left),
                operator: EcoString::from("and"),
                right: Box::new(right),
                loc: self.get_loc(),
            }));
        }

        Ok(left)
    }

    fn parse_equality(&mut self) -> ParserExprRes {
        let mut expr = self.parse_comparison()?;

        while self.is_at(TokenKind::EqualEqual) || self.is_at(TokenKind::BangEqual) {
            let operator = self.eat()?.value.clone();
            let right = self.parse_comparison()?;
            expr = Expr::Binary(BinaryExpr {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
                loc: self.get_loc(),
            });
        }

        Ok(expr)
    }

    fn parse_comparison(&mut self) -> ParserExprRes {
        let mut expr = self.parse_term()?;

        while self.is_at(TokenKind::Less)
            || self.is_at(TokenKind::LessEqual)
            || self.is_at(TokenKind::Greater)
            || self.is_at(TokenKind::GreaterEqual)
        {
            let operator = self.eat()?.value.clone();
            let right = self.parse_term()?;
            expr = Expr::Binary(BinaryExpr {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
                loc: self.get_loc(),
            });
        }

        Ok(expr)
    }

    fn parse_term(&mut self) -> ParserExprRes {
        let mut expr = self.parse_factor()?;

        while self.is_at(TokenKind::Minus) || self.is_at(TokenKind::Plus) {
            let operator = self.eat()?.value.clone();
            let right = self.parse_factor()?;
            expr = Expr::Binary(BinaryExpr {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
                loc: self.get_loc(),
            });
        }

        Ok(expr)
    }

    fn parse_factor(&mut self) -> ParserExprRes {
        let mut expr = self.parse_unary()?;

        while self.is_at(TokenKind::Star)
            || self.is_at(TokenKind::Slash)
            || self.is_at(TokenKind::Modulo)
        {
            let operator = self.eat()?.value.clone();
            let right = self.parse_unary()?;
            expr = Expr::Binary(BinaryExpr {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
                loc: self.get_loc(),
            });
        }

        Ok(expr)
    }

    fn parse_unary(&mut self) -> ParserExprRes {
        if self.is_at(TokenKind::Bang) || self.is_at(TokenKind::Minus) {
            let operator = self.eat()?.value.clone();
            let right = self.parse_primary()?;

            return Ok(Expr::Unary(UnaryExpr {
                operator,
                right: Box::new(right),
                loc: self.get_loc(),
            }));
        }

        self.parse_call()
    }

    fn parse_call(&mut self) -> ParserExprRes {
        let mut expr = self.parse_primary()?;

        loop {
            match self.at().kind {
                TokenKind::OpenParen => {
                    self.eat()?;
                    self.skip_new_lines();

                    expr = self.finish_call(expr)?;
                }
                TokenKind::Dot => {
                    self.eat()?;
                    let prop_name = self.expect(TokenKind::Identifier)
                        .map_err(|_| self.trigger_error(ParserErr::MissingPropName, true))?
                        .value;

                    expr = Expr::Get(GetExpr {
                        object: Box::new(expr),
                        name: prop_name,
                        loc: self.get_loc(),
                    })
                }
                _ => break
            }
        }

        Ok(expr)
    }

    fn finish_call(&mut self, callee: Expr) -> ParserExprRes {
        let mut args: Vec<Expr> = vec![];

        if !self.is_at(TokenKind::CloseParen) {
            loop {
                if args.len() >= 255 {
                    return Err(self.trigger_error(ParserErr::TooManyCallArgs, true))
                }

                args.push(self.parse_expr()?);
                self.skip_new_lines();

                if self.is_at(TokenKind::Comma) {
                    let _ = self.eat();
                    self.skip_new_lines();

                    if self.is_at(TokenKind::CloseParen) { break }
                }
                else if !self.is_at(TokenKind::CloseParen) {
                    return Err(self.trigger_error(ParserErr::MissingArgsComma, true))
                }
                else {
                    break
                }
            }

            self.skip_new_lines();
        }

        self.expect(TokenKind::CloseParen)
            .map_err(|_| self.trigger_error(ParserErr::MissingCallCloseParen, true))?;

        Ok(Expr::Call(CallExpr {
            callee: Box::new(callee),
            args,
            loc: self.get_loc()
        }))
    }

    fn parse_primary(&mut self) -> ParserExprRes {
        match &self.eat()?.kind {
            TokenKind::Identifier | TokenKind::True | TokenKind::False | TokenKind::Null => {
                Ok(Expr::Identifier(IdentifierExpr {
                    name: self.prev().value.clone(),
                    loc: self.get_loc(),
                }))
            }
            TokenKind::Int => self.parse_int_literal(),
            TokenKind::Real => self.parse_real_literal(),
            TokenKind::String => self.parse_str_literal(),
            TokenKind::OpenParen => self.parse_grouping(),
            TokenKind::NewLine => Err(self.trigger_error(ParserErr::UnexpectedEol, false)),
            tk => {
                match tk {
                    TokenKind::Star | TokenKind::Plus | TokenKind::Slash | TokenKind::Modulo => {
                        Err(self.trigger_error(ParserErr::MissingLhsInBinop, true))
                    }
                    _ => Err(self
                        .trigger_error(ParserErr::UnexpectedToken(self.prev().to_string()), true)),
                }
            }
        }
    }

    fn parse_int_literal(&mut self) -> ParserExprRes {
        let tk = self.prev();
        let value = tk
            .value
            .parse::<i64>()
            .map_err(|_| self.trigger_error(ParserErr::ParsingInt, true))?;

        Ok(Expr::IntLiteral(IntLiteralExpr {
            value,
            loc: self.get_loc(),
        }))
    }

    fn parse_real_literal(&mut self) -> ParserExprRes {
        let tk = self.prev();
        let value = tk
            .value
            .parse::<f64>()
            .map_err(|_| self.trigger_error(ParserErr::ParsingReal, true))?;

        Ok(Expr::RealLiteral(RealLiteralExpr {
            value,
            loc: self.get_loc(),
        }))
    }

    fn parse_str_literal(&self) -> ParserExprRes {
        let tk = self.prev();

        Ok(Expr::StrLiteral(StrLiteralExpr {
            value: tk.value.clone(),
            loc: self.get_loc(),
        }))
    }

    fn parse_grouping(&mut self) -> ParserExprRes {
        let expr = match self.parse_expr() {
            Ok(expr) => expr,
            Err(e) => match e.err {
                ParserErr::UnexpectedEof | ParserErr::UnexpectedEol => {
                    return Err(PhyResult::new(
                        ParserErr::ParenNeverClosed,
                        Some(self.get_loc()),
                    ))
                }
                _ => return Err(e),
            },
        };

        self.expect(TokenKind::CloseParen)
            .map_err(|_| PhyResult::new(ParserErr::ParenNeverClosed, Some(self.get_loc())))?;

        Ok(Expr::Grouping(GroupingExpr {
            expr: Box::new(expr),
            loc: self.get_loc(),
        }))
    }

    fn at(&self) -> &Token {
        self.tokens.get(self.current).unwrap()
    }

    fn eat(&mut self) -> Result<&Token, PhyResParser> {
        if self.eof() {
            return Err(PhyResult::new(
                ParserErr::UnexpectedEof,
                Some(self.get_loc()),
            ));
        }

        self.current += 1;
        Ok(self.prev())
    }

    fn expect(&mut self, kind: TokenKind) -> Result<Token, PhyResParser> {
        let tk = self.eat()?;

        match tk.kind == kind {
            true => Ok(self.prev().clone()),
            false => Err(PhyResult::new(
                ParserErr::ExpectedToken(format!("{:?}", kind), format!("{:?}", tk.kind)),
                Some(self.get_loc()),
            )),
        }
    }

    fn expect_and_skip(&mut self, kind: TokenKind) -> Result<(), PhyResParser> {
        self.expect(kind)?;
        self.skip_new_lines();

        Ok(())
    }

    fn skip_expect_and_skip(&mut self, kind: TokenKind) -> Result<(), PhyResParser> {
        self.skip_new_lines();
        self.expect(kind)?;
        self.skip_new_lines();

        Ok(())
    }

    fn is_at(&self, kind: TokenKind) -> bool {
        self.at().kind == kind
    }

    fn prev(&self) -> &Token {
        self.tokens.get(self.current - 1).unwrap()
    }

    fn eof(&self) -> bool {
        self.is_at(TokenKind::Eof)
    }

    fn skip_new_lines(&mut self) {
        // If we have a new line to begin a statement/expr parsing,
        // we skip it. There are important only in parsing steps
        while !self.eof() && self.is_at(TokenKind::NewLine) {
            self.current += 1;
        }

        self.start_loc = self.at().loc.start;
    }

    // We dont have to activate the synchro each time, if the error occured
    // because we ate a '\n' that wasn't supposed to be here, we are already
    // past the error, we are on the new line. No need to synchronize
    fn trigger_error(&mut self, err: ParserErr, synchro: bool) -> PhyResParser {
        if synchro {
            self.synchronize();
        }

        PhyResult::new(err, Some(self.get_loc()))
    }

    fn is_at_brace_or_end_of(&mut self, err: ParserErr) -> Result<(), PhyResParser> {
        if self.is_at(TokenKind::OpenBrace)
            || self.is_at(TokenKind::Eof)
            || self.is_at(TokenKind::NewLine)
        {
            return Err(self.trigger_error(err, true));
        }

        Ok(())
    }

    fn is_not_at_brace_or_end_of(&mut self, err: ParserErr) -> Result<(), PhyResParser> {
        if !self.is_at(TokenKind::OpenBrace)
            || self.is_at(TokenKind::Eof)
            || self.is_at(TokenKind::NewLine)
        {
            return Err(self.trigger_error(err, true));
        }

        Ok(())
    }

    // TODO: For now, we are only looking for new line token as we
    // don't have ';' to clearly know where the current statement stops.
    // It would be great to have an argument to this function that let
    // us know where we were when we got the error to know which corresponding
    // token to look for. In a struct def, we go for a closing '}', ...

    // We are here in panic mode
    fn synchronize(&mut self) {
        // If the error occured because unexpected Eol, we are synchro
        if self.prev().kind == TokenKind::NewLine {
            return;
        }

        // We parse potential other errors in statements
        while !self.eof() {
            match self.at().kind {
                TokenKind::NewLine => return,
                //| TokenKind::Struct
                //| TokenKind::Fn
                //| TokenKind::Var
                //| TokenKind::Const
                //| TokenKind::For
                //| TokenKind::If
                //| TokenKind::While
                //| TokenKind::Print
                //| TokenKind::Return => return,
                _ => {
                    let _ = self.eat();
                }
            }
        }
    }

    fn get_loc(&self) -> Loc {
        Loc::new(self.start_loc, self.at().loc.start)
    }
}

#[cfg(test)]
mod tests {
    use tools::results::Loc;
    use crate::parser::{ParserErr, utils::*};
    use ecow::EcoString;

    #[test]
    fn parse_primary() {
        let code = "12
24.
54.678
\"foo bar! 5-{6}\"
(true)
( (null ))";

        let infos = get_expr_nodes_infos(code);
        assert_eq!(infos.get_int_values(), vec![&12]);
        assert_eq!(infos.get_real_values(), vec![&24., &54.678]);
        assert_eq!(
            infos.get_str_values(),
            vec![EcoString::from("foo bar! 5-{6}")]
        );

        assert_eq!(
            infos.get_grp_values()[0].get_ident_values(),
            vec![EcoString::from("true")]
        );
        assert_eq!(
            infos.get_grp_values()[1].get_grp_values()[0].get_ident_values(),
            vec![EcoString::from("null")]
        );

        // Errors
        let code = "(art + 
";

        let errs = lex_and_parse(code).err().unwrap();
        let e = errs.iter().map(|e| &e.err).collect::<Vec<&ParserErr>>();

        assert_eq!(e, vec![&ParserErr::ParenNeverClosed]);
    }

    #[test]
    fn parse_binop() {
        let code = "14. + -67
25. + 3 * 4
25. / 3 + 4";

        let infos = get_expr_nodes_infos(code);
        let left = infos.get_binop_values()[0].0.get_real_values()[0];
        let right = infos.get_binop_values()[0].2.unary[0].expr.get_int_values()[0];
        assert_eq!(left, &14f64);
        assert_eq!(infos.get_binop_values()[0].1, EcoString::from("+"));
        assert_eq!(right, &67);

        let left = infos.get_binop_values()[1].0.get_real_values()[0];
        let op = infos.get_binop_values()[1].1.clone();
        let right_binop = &infos.get_binop_values()[1].2.get_binop_values()[0];
        let left_bis = right_binop.0.get_int_values()[0];
        let op_bis = right_binop.1.clone();
        let right_bis = right_binop.2.get_int_values()[0];
        assert_eq!(left, &25f64);
        assert_eq!(op, EcoString::from("+"));
        assert_eq!(left_bis, &3i64);
        assert_eq!(op_bis, EcoString::from("*"));
        assert_eq!(right_bis, &4i64);

        let left_binop = &infos.get_binop_values()[2].0.get_binop_values()[0];
        let left_bis = left_binop.0.get_real_values()[0];
        let op_bis = left_binop.1.clone();
        let right_bis = left_binop.2.get_int_values()[0];
        let op = infos.get_binop_values()[2].1.clone();
        let right = infos.get_binop_values()[2].2.get_int_values()[0];
        assert_eq!(left_bis, &25f64);
        assert_eq!(op_bis, EcoString::from("/"));
        assert_eq!(right_bis, &3i64);
        assert_eq!(op, EcoString::from("+"));
        assert_eq!(right, &4i64);

        // Errors
        let code = "5 +
";

        let errs = lex_and_parse(code).err().unwrap();
        let e = errs.iter().map(|e| &e.err).collect::<Vec<&ParserErr>>();

        assert_eq!(e, vec![&ParserErr::UnexpectedEol]);
    }

    #[test]
    fn parse_unary() {
        let code = "-12
-foo
-54.67
!true";
